# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import valuationsRouter from "./valuations";
+import estimatesRouter from "./estimates";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(valuationsRouter);
+router.use(estimatesRouter);
 
 export default router;
